Fix spacing

--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ a:hover {
 #header .brand {
   flex-grow: auto;
   flex-basis: 1;
-  margin: 30px 0 0 0;
+  margin-top: 30px;
 }
 
 .home {
@@ -119,10 +119,17 @@ a:hover {
 .screenshot {
   width: 311px;
   margin-right: 10px;
+  margin-bottom: 10px;
   border: 1px solid #7B828A;
 }
 .screenshot:last-child {
   margin-right: 0;
+  margin-bottom: 10px;
+}
+
+#future-caps,
+#daily-caps {
+  padding-bottom: 24px;
 }
 
 #future-caps h2,
